# rustlings

./: .gitignore  Cargo.toml  ignore_elf.sh
exercises/: quiz1.rs  quiz2.rs  quiz3.rs
exercises/enums/: enums3.rs
exercises/error_handling/: errors1.rs  errors6.rs
exercises/generics/: generics1.rs  generics2.rs
exercises/hashmaps/: hashmaps1.rs  hashmaps3.rs
exercises/modules/: modules2.rs
exercises/move_semantics/: move_semantics2.rs  move_semantics4.rs
exercises/options/: options1.rs  options2.rs
exercises/primitive_types/: primitive_types2.rs  primitive_types3.rs  primitive_types5.rs
exercises/strings/: strings3.rs
exercises/structs/: structs1.rs  structs3.rs
exercises/tests/: tests3.rs
exercises/traits/: traits1.rs  traits2.rs  traits4.rs
exercises/variables/: variables2.rs
exercises/vecs/: vecs2.rs
