[package]
name = "rustlings"
version = "5.4.1"
authors = [
  "Liv <mokou@fastmail.com>",
  "Carol (Nichols || Goulding) <carol.nichols@gmail.com>",
]
edition = "2021"

[dependencies]
argh = "0.1"
indicatif = "0.17.3"
console = "0.15.5"
notify = "5.1"
toml = "0.7.3"
regex = "1.7.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
home = "0.5.4"
glob = "0.3.1"

[[bin]]
name = "rustlings"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
glob = "0.3.1"
